2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.in,
	  configure,
	  configure.ac,
	  device/lib/Makefile.in,
	  device/lib/r2ka,
	  src/SDCCmain.c,
	  src/port.h,
	  src/z80/main.c,
	  support/regression/Makefile.in,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/ports/ucr2ka:
	  r2ka port to better support Rabbit 2000A, 2000B, 2000C, 3000. RFE #709.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/main.c,
	  device/lib/r3ka/mulchar.s,
	  device/lib/r3ka/Makefile.in:
	  Use mul for r3ka, RFE #372.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/peeph.def,
	  src/z80/peeph-r2k.def,
	  src/SDCCval.h,
	  src/SDCCval.c:
	  Small improvements for z80 and related.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve speed of r2k builtins.
	* src/SDCCast.c:
	  Optimize strcpy on Rabbits.
	* src/port.h:
	  Prepare for r2ka port.

2020-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve use of Rabbit instructions.

2020-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  device/lib/r2k/crt0.s,
	  src/SDCCgen.h,
	  src/SDCCgen.c,
	  device/lib/r2k/memcpy.s,
	  device/lib/r2k/memmove.s:
	  Work around Rabbit 2000 / 3000 ldir / lddr wait state bugs.
	* src/z80/z80.h:
	  Prepare for r2ka port.

2020-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Work around Rabbit 2000 mul wait state bug.

2020-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3105.

2020-09-23 Sergey Belyashov <sergey.belyashov@gmail.com>

	* configure,
	  configure.ac:
	  Apply patch #357 from Tim Stahlhut: fix bug #3114.

2020-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix handling of ioi, ioe in peephole optimizer, including bug #3118.

2020-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3116.

2020-09-18 Sergey Belyashov <sergey.belyashov@gmail.com>